--- a/styles.css
+++ b/styles.css
@@ -1,51 +1,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: 'Josefin Sans', sans-serif;
     height: 100vh;
-    background: linear-gradient(45deg,black, #2c3c4a);
+    background-image: url(/images/Background_image.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     color: #eaeaea;
 }
-*.hide{
+
+*.hide {
     display: none !important;
 }
-.container{
+
+.container {
     position: relative;
     display: inline-block;
     padding: 32px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: linear-gradient(45deg, transparent 50%,rgba(255,255,0,0.08));
+    background: linear-gradient(45deg, transparent 50%, rgba(255, 255, 0, 0.08));
     background-color: #223140;
     border-radius: 24px;
     text-align: center;
     box-shadow: -16px 16px 16px 8px rgba(0, 0, 0, 0.2);
 
 }
-.load-widget{
+
+.load-widget {
     width: 360px;
     height: 420px;
 
 }
-.loader{
+
+.loader {
     position: relative;
     display: inline-block;
     height: 240px;
     width: 240px;
     border-radius: 50%;
-    background: conic-gradient(rgba(1,182,190,0.3)0%,transparent 65%);
+    background: conic-gradient(rgba(1, 182, 190, 0.3)0%, transparent 65%);
     animation: radarRotate 2s linear infinite;
 }
 
-@keyframes radarRotate{
-    100% { transform: rotate(-360deg);}
+@keyframes radarRotate {
+    100% {
+        transform: rotate(-360deg);
+    }
 }
-.loader:before{
+
+.loader:before {
     content: '';
     position: absolute;
     height: 0;
@@ -56,18 +67,21 @@ body{
     filter: drop-shadow(0 0 12px #01b6be);
 
 }
-.loader h1{
+
+.loader h1 {
     line-height: 1.3;
     margin-bottom: 32px;
     color: #aaffff;
     text-shadow: 0 0 8px #81ecec;
 }
-.loader-content{
+
+.loader-content {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
 }
+
 .loader-content button {
     position: relative;
     cursor: pointer;
@@ -83,18 +97,19 @@ body{
     box-shadow: 0 0 12px #81ecec;
 
 }
-.loader-content .result button{
+
+.loader-content .result button {
     height: 120px;
     width: 120px;
     margin-top: 16px;
 }
 
-.loader-content button:hover{
+.loader-content button:hover {
     background-color: #1f3c4e;
 
 }
 
-.loader-content button:before{
+.loader-content button:before {
     content: '';
     position: absolute;
     height: 100%;
@@ -107,15 +122,18 @@ body{
 }
 
 @keyframes btnRing {
-    60%, 100%{
+
+    60%,
+    100% {
         height: calc(100% + 60px);
         width: calc(100% + 60px);
         top: -32px;
         left: -32px;
         opacity: 0;
-    }   
+    }
 }
-.loader-content button:after{
+
+.loader-content button:after {
     content: '';
     position: absolute;
     height: calc(100% + 4px);
@@ -126,13 +144,15 @@ body{
     z-index: -1;
     border-radius: 50%;
 }
-.content{
+
+.content {
     display: flex;
     width: 100%;
     font-size: 64px;
     margin: 12px 0 32px 0;
     flex-direction: column;
 }
-.content small{
-    font-size: 40%;  
+
+.content small {
+    font-size: 40%;
 }
