Internet Speed Calculator

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@ body {
     background-size: cover;
     color: #eaeaea;
 }
+img{
+    height: 250px;
+}
 
 *.hide {
     display: none !important;
